--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -8,4 +8,4 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  walmart_key: <%= ENV["SECRET_WALLMART_BASE"] %>
+  walmart_key: gexvrxrtbp7jrms7s3fuchn7
